# shattered

./: .gitignore  .pre-commit-config.yaml  .travis.yml  Dockerfile  README.adoc  docker-compose.yml  pyproject.toml  tox.ini
.github/workflows/: release.yml  test.yml
examples/bunny/: Dockerfile  bunny.html  docker-compose.yml  echo.html  index.html  logger.py  main.css  stomp.js  temp-queue.html
examples/chat/: Dockerfile  README.adoc  chat.py  docker-compose.yml  requirements.txt
examples/chat/static/: stompcooler.js
examples/chat/templates/: chat.html
examples/echo/: echo.py  send.py
src/shattered/: shattered.py
tests/: test_shattered.py
